--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 # http://github.com/RailsApps/rails-composer/issues
 #----------------------------------------------------------------------------
 
+.byebug_history
+
 # bundler state
 /.bundle
 /vendor/bundle/
